objects/Contact_Role__c.object
<CustomObject>
    <label>Contact Role</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>External Customer Portal User</fullName>
                </value>
                <value>
                    <fullName>FCO Contact</fullName>
                </value>
                <value>
                    <fullName>CEO/ Hospital Administrator</fullName>
                </value>
                <value>
                    <fullName>Certified Tumor Registrar (CTR)</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>Clinical Chemist</fullName>
                </value>
                <value>
                    <fullName>Clinical nurse specialist (MO)</fullName>
                </value>
                <value>
                    <fullName>Clinician</fullName>
                </value>
                <value>
                    <fullName>Cytopathologist</fullName>
                </value>
                <value>
                    <fullName>Dosimetrist</fullName>
                </value>
                <value>
                    <fullName>Government Ministries</fullName>
                </value>
                <value>
                    <fullName>Health Authorities</fullName>
                </value>
                <value>
                    <fullName>Histotechnologist</fullName>
                </value>
                <value>
                    <fullName>Information Systems Specialist</fullName>
                </value>
                <value>
                    <fullName>Information Technology Specialist</fullName>
                </value>
                <value>
                    <fullName>Medical Physicist</fullName>
                </value>
                <value>
                    <fullName>Medical Social Worker</fullName>
                </value>
                <value>
                    <fullName>Nurse Practitioners (MO)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pathologist</fullName>
                </value>
                <value>
                    <fullName>Pathologist Assistant</fullName>
                </value>
                <value>
                    <fullName>Patient navigator (MO)</fullName>
                </value>
                <value>
                    <fullName>Physical Therapist</fullName>
                </value>
                <value>
                    <fullName>Physician Assistants (MO)</fullName>
                </value>
                <value>
                    <fullName>Professor</fullName>
                </value>
                <value>
                    <fullName>Psychiatrist</fullName>
                </value>
                <value>
                    <fullName>Psychologist</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Referring Physician</fullName>
                </value>
                <value>
                    <fullName>Researchers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF(CONTAINS(Account__r.Name , &quot;Elekta&quot;), &quot;Internal&quot;, &quot;External&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active</description>
        <inlineHelpText>Used to determine if the Customer Portal access to this Account is active and operating.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCO_Type__c</fullName>
        <label>FCO Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Important Field Safety Notice</fullName>
                </value>
                <value>
                    <fullName>Important Field Safety Modification</fullName>
                </value>
                <value>
                    <fullName>Important User Notice</fullName>
                </value>
                <value>
                    <fullName>Important Product Modification</fullName>
                </value>
                <value>
                    <fullName>Product Bulletin</fullName>
                </value>
                <value>
                    <fullName>Product Modification</fullName>
                </value>
                <value>
                    <fullName>Product Recommendation</fullName>
                </value>
                <value>
                    <fullName>Internal Information Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location</description>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_List__c</fullName>
        <label>Action List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Language_Correspondence__c</fullName>
        <label>Language Correspondence</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_Access_Level_Case__c</fullName>
        <label>Portal Access Level - Case</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Role__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Read Only</fullName>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_Access_Level_Location__c</fullName>
        <description>Portal Access Level - Location</description>
        <label>Portal Access Level - Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Role__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Read Only</fullName>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_Access_Level_Contracts__c</fullName>
        <label>Portal Access Level – Contracts</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Role__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Read Only</fullName>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_Access_Level_Install_Base__c</fullName>
        <label>Portal Access Level – Install Base</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Role__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Read Only</fullName>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Language_for_Correspondance__c</fullName>
        <label>Second Language for Correspondance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Language_for_Correspondence__c</fullName>
        <label>Primary Language for Correspondence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>ISCHHANGED_on_Contact</fullName>
        <active>true</active>
        <description>To ensure that the Contact can not be modified once record is created.  Must be deactivated or deleted by Master System Admin or Regional System Admin.</description>
        <errorConditionFormula>AND(
$User.ProfileId  &lt;&gt; &apos;00e6000000135c0&apos;,
NOT(ISNEW()), 
ISCHANGED(  Contact__c  ) 
)</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>Contact can not be changed after Save.  Either Deactivate or alert System Administrator for delete to take place.</errorMessage>
    </validationRules>
</CustomObject>